--- a/PositionIn/NewItems/UploadPhotoCell/PositionIn.PickPhotoView.xib
+++ b/PositionIn/NewItems/UploadPhotoCell/PositionIn.PickPhotoView.xib
@@ -17,14 +17,15 @@
             <subviews>
                 <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="newItemCamera" translatesAutoresizingMaskIntoConstraints="NO" id="WwA-14-YRK">
                     <rect key="frame" x="5" y="5" width="190" height="190"/>
+                    <color key="tintColor" red="0.92941176469999998" green="0.1058823529" blue="0.18039215689999999" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
                         <constraint firstAttribute="width" secondItem="WwA-14-YRK" secondAttribute="height" multiplier="1:1" id="0Bc-Q3-46H"/>
                     </constraints>
                 </imageView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Insert photo" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nMr-8N-dii">
-                    <rect key="frame" x="200" y="90" width="395" height="19.5"/>
+                    <rect key="frame" x="200" y="90" width="395" height="20"/>
                     <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
-                    <color key="textColor" red="0.13725490200000001" green="0.4431372549" blue="0.83529411760000005" alpha="1" colorSpace="calibratedRGB"/>
+                    <color key="textColor" red="0.92941176469999998" green="0.1058823529" blue="0.18039215689999999" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
             </subviews>
