--- a/PositionIn/Views/ProfileCells/PositionIn.ProfileFollowCell.xib
+++ b/PositionIn/Views/ProfileCells/PositionIn.ProfileFollowCell.xib
@@ -21,6 +21,7 @@
                         </constraints>
                         <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
                         <state key="normal" title="Follow">
+                            <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                         </state>
                         <connections>
