--- a/PositionIn/Views/ProfileCells/PositionIn.ProfileInfoCell.xib
+++ b/PositionIn/Views/ProfileCells/PositionIn.ProfileInfoCell.xib
@@ -15,7 +15,7 @@
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="S6i-kH-oJF">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="100"/>
-                        <color key="backgroundColor" red="0.88235294119999996" green="0.0" blue="0.14901960780000001" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="backgroundColor" red="0.92941176469999998" green="0.1058823529" blue="0.18039215689999999" alpha="1" colorSpace="calibratedRGB"/>
                     </imageView>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fcE-xS-ZvD" customClass="AvatarView" customModule="PositionIn" customModuleProvider="target">
                         <rect key="frame" x="130" y="5" width="60" height="60"/>
