--- a/PositionIn/Base.lproj/Main.storyboard
+++ b/PositionIn/Base.lproj/Main.storyboard
@@ -2,6 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="j5Z-eJ-Y0Z">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--Main Menu View Controller-->
@@ -259,72 +260,127 @@
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                             </imageView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fUl-gm-R24">
-                                <rect key="frame" x="0.0" y="0.0" width="600" height="113"/>
+                                <rect key="frame" x="0.0" y="64" width="600" height="93"/>
                                 <subviews>
-                                    <searchBar contentMode="redraw" placeholder="Search" translatesAutoresizingMaskIntoConstraints="NO" id="gPq-Sv-Swk" userLabel="Categories Search Bar" customClass="SearchBar" customModule="PositionIn" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="20" width="600" height="44"/>
-                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                        <color key="tintColor" red="0.13725490200000001" green="0.4431372549" blue="0.83529411760000005" alpha="1" colorSpace="calibratedRGB"/>
-                                        <color key="barTintColor" red="0.13725490200000001" green="0.4431372549" blue="0.83529411760000005" alpha="1" colorSpace="calibratedRGB"/>
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Search" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="Lrk-8R-Gfe">
+                                        <rect key="frame" x="8" y="8" width="584" height="30"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
-                                    </searchBar>
-                                    <searchBar contentMode="redraw" placeholder="Current location" translatesAutoresizingMaskIntoConstraints="NO" id="fQn-tl-tB5" userLabel="Location Search Bar" customClass="SearchBar" customModule="PositionIn" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="64" width="600" height="44"/>
-                                        <color key="barTintColor" red="0.13725490200000001" green="0.4431372549" blue="0.83529411760000005" alpha="1" colorSpace="calibratedRGB"/>
+                                    </textField>
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Current location" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="3P6-Ny-j89">
+                                        <rect key="frame" x="8" y="55" width="584" height="30"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
-                                    </searchBar>
+                                    </textField>
                                 </subviews>
                                 <color key="backgroundColor" red="0.13725490200000001" green="0.4431372549" blue="0.83529411760000005" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
-                                    <constraint firstAttribute="trailing" secondItem="fQn-tl-tB5" secondAttribute="trailing" id="H2b-QF-OaN"/>
-                                    <constraint firstItem="gPq-Sv-Swk" firstAttribute="leading" secondItem="fUl-gm-R24" secondAttribute="leading" id="HlT-JQ-etL"/>
-                                    <constraint firstItem="fQn-tl-tB5" firstAttribute="top" secondItem="gPq-Sv-Swk" secondAttribute="bottom" id="Lbh-J3-fG2"/>
-                                    <constraint firstItem="fQn-tl-tB5" firstAttribute="leading" secondItem="fUl-gm-R24" secondAttribute="leading" id="erJ-7t-2bP"/>
-                                    <constraint firstAttribute="trailing" secondItem="gPq-Sv-Swk" secondAttribute="trailing" id="vKw-AO-cgC"/>
-                                    <constraint firstAttribute="bottom" secondItem="fQn-tl-tB5" secondAttribute="bottom" constant="5" id="yFi-w3-oBU"/>
+                                    <constraint firstItem="Lrk-8R-Gfe" firstAttribute="top" secondItem="fUl-gm-R24" secondAttribute="top" constant="8" id="277-Lt-b41"/>
+                                    <constraint firstAttribute="trailing" secondItem="3P6-Ny-j89" secondAttribute="trailing" constant="8" id="4j8-VO-FLb"/>
+                                    <constraint firstItem="Lrk-8R-Gfe" firstAttribute="trailing" secondItem="fUl-gm-R24" secondAttribute="trailingMargin" id="7mk-H1-5aM"/>
+                                    <constraint firstAttribute="height" constant="93" id="AO2-gE-5bz"/>
+                                    <constraint firstItem="3P6-Ny-j89" firstAttribute="top" secondItem="Lrk-8R-Gfe" secondAttribute="bottom" constant="17" id="JwB-nz-83V"/>
+                                    <constraint firstItem="Lrk-8R-Gfe" firstAttribute="leading" secondItem="fUl-gm-R24" secondAttribute="leadingMargin" id="L68-K8-mZG"/>
+                                    <constraint firstItem="3P6-Ny-j89" firstAttribute="leading" secondItem="fUl-gm-R24" secondAttribute="leading" constant="8" id="Wtt-ki-Nke"/>
+                                    <constraint firstAttribute="bottom" secondItem="3P6-Ny-j89" secondAttribute="bottom" constant="8" id="vNT-Tx-Ibc"/>
                                 </constraints>
                             </view>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="V9L-hl-OWs" customClass="TableView" customModule="PosInCore">
-                                <rect key="frame" x="0.0" y="113" width="600" height="487"/>
+                                <rect key="frame" x="0.0" y="157" width="600" height="443"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                             </tableView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zk0-xD-ugu">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="64"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qDk-bo-enK">
+                                        <rect key="frame" x="8" y="26" width="64" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="30" id="4bH-dm-a2X"/>
+                                            <constraint firstAttribute="width" constant="64" id="rmG-fT-4Pa"/>
+                                        </constraints>
+                                        <state key="normal" title="Cancel">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="cancelButtonPressed:" destination="kST-So-Shi" eventType="touchUpInside" id="00r-cn-aRV"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" red="0.13725490200000001" green="0.4431372549" blue="0.83529411760000005" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="64" id="2Gp-nv-YYS"/>
+                                    <constraint firstAttribute="bottom" secondItem="qDk-bo-enK" secondAttribute="bottom" constant="8" id="CDg-1L-doC"/>
+                                    <constraint firstAttribute="height" constant="64" id="IQv-lv-7LR"/>
+                                    <constraint firstItem="qDk-bo-enK" firstAttribute="leading" secondItem="zk0-xD-ugu" secondAttribute="leading" constant="8" id="Wmj-iT-7AC"/>
+                                </constraints>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="2Gp-nv-YYS"/>
+                                    </mask>
+                                </variation>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <gestureRecognizers/>
                         <constraints>
-                            <constraint firstItem="gPq-Sv-Swk" firstAttribute="top" secondItem="9UO-pg-gYJ" secondAttribute="bottom" id="2us-b8-5l3"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="fUl-gm-R24" secondAttribute="trailing" constant="-16" id="2e0-2A-UET"/>
+                            <constraint firstItem="fUl-gm-R24" firstAttribute="top" secondItem="zk0-xD-ugu" secondAttribute="bottom" id="4FX-5a-73R"/>
+                            <constraint firstItem="zk0-xD-ugu" firstAttribute="leading" secondItem="F0m-Tp-43U" secondAttribute="leading" id="62i-wz-BfI"/>
                             <constraint firstAttribute="trailing" secondItem="V9L-hl-OWs" secondAttribute="trailing" id="6y6-xf-vuc"/>
-                            <constraint firstItem="fUl-gm-R24" firstAttribute="top" secondItem="9UO-pg-gYJ" secondAttribute="bottom" id="A9T-vq-BEO"/>
-                            <constraint firstAttribute="trailing" secondItem="AMn-w6-2mc" secondAttribute="trailing" id="FW2-3s-Etk"/>
+                            <constraint firstItem="zk0-xD-ugu" firstAttribute="top" secondItem="F0m-Tp-43U" secondAttribute="top" id="8FO-Pw-fpm"/>
+                            <constraint firstItem="AMn-w6-2mc" firstAttribute="leading" secondItem="F0m-Tp-43U" secondAttribute="leading" id="A8w-2O-c3J"/>
+                            <constraint firstItem="fUl-gm-R24" firstAttribute="top" secondItem="zk0-xD-ugu" secondAttribute="bottom" id="C2Q-km-ktX"/>
+                            <constraint firstItem="V9L-hl-OWs" firstAttribute="leading" secondItem="F0m-Tp-43U" secondAttribute="leading" id="H8u-xj-zh2"/>
                             <constraint firstAttribute="trailing" secondItem="fUl-gm-R24" secondAttribute="trailing" id="IwM-qr-qh2"/>
-                            <constraint firstItem="AMn-w6-2mc" firstAttribute="top" secondItem="9UO-pg-gYJ" secondAttribute="bottom" id="NoZ-yF-YZa"/>
-                            <constraint firstItem="fUl-gm-R24" firstAttribute="top" secondItem="F0m-Tp-43U" secondAttribute="top" id="O5H-TG-X6p"/>
-                            <constraint firstItem="AMn-w6-2mc" firstAttribute="top" secondItem="fUl-gm-R24" secondAttribute="top" id="Rn1-NQ-xSI"/>
+                            <constraint firstAttribute="trailing" secondItem="zk0-xD-ugu" secondAttribute="trailing" id="JAT-n7-k4C"/>
+                            <constraint firstItem="AMn-w6-2mc" firstAttribute="top" secondItem="zk0-xD-ugu" secondAttribute="top" id="JIe-Dk-dX4"/>
+                            <constraint firstAttribute="trailing" secondItem="AMn-w6-2mc" secondAttribute="trailing" id="PJA-b2-cUG"/>
+                            <constraint firstItem="zk0-xD-ugu" firstAttribute="leading" secondItem="F0m-Tp-43U" secondAttribute="leading" id="QTk-7e-aF3"/>
                             <constraint firstItem="V9L-hl-OWs" firstAttribute="leading" secondItem="F0m-Tp-43U" secondAttribute="leading" id="SEA-nU-NLp"/>
                             <constraint firstAttribute="trailing" secondItem="fUl-gm-R24" secondAttribute="trailing" id="TsF-tf-wHE"/>
+                            <constraint firstItem="03r-xU-W5j" firstAttribute="top" secondItem="V9L-hl-OWs" secondAttribute="bottom" id="UsH-uW-Kpr"/>
                             <constraint firstItem="fUl-gm-R24" firstAttribute="leading" secondItem="F0m-Tp-43U" secondAttribute="leading" id="Wek-JC-T7I"/>
-                            <constraint firstItem="AMn-w6-2mc" firstAttribute="top" secondItem="fUl-gm-R24" secondAttribute="bottom" id="hSP-aO-Klc"/>
+                            <constraint firstItem="fUl-gm-R24" firstAttribute="top" secondItem="zk0-xD-ugu" secondAttribute="bottom" id="Z15-K1-bgY"/>
+                            <constraint firstItem="zk0-xD-ugu" firstAttribute="top" secondItem="F0m-Tp-43U" secondAttribute="top" id="hfO-on-fpQ"/>
                             <constraint firstItem="fUl-gm-R24" firstAttribute="leading" secondItem="F0m-Tp-43U" secondAttribute="leading" id="lC9-0d-6tF"/>
                             <constraint firstItem="03r-xU-W5j" firstAttribute="top" secondItem="AMn-w6-2mc" secondAttribute="bottom" id="nSE-7O-4Lh"/>
+                            <constraint firstAttribute="trailing" secondItem="V9L-hl-OWs" secondAttribute="trailing" id="pPg-dR-13O"/>
                             <constraint firstItem="AMn-w6-2mc" firstAttribute="leading" secondItem="F0m-Tp-43U" secondAttribute="leading" id="r06-Wg-sic"/>
+                            <constraint firstAttribute="trailing" secondItem="zk0-xD-ugu" secondAttribute="trailing" id="sM5-nL-2Qs"/>
+                            <constraint firstItem="V9L-hl-OWs" firstAttribute="top" secondItem="fUl-gm-R24" secondAttribute="bottom" id="udx-dZ-EnP"/>
+                            <constraint firstItem="AMn-w6-2mc" firstAttribute="top" secondItem="F0m-Tp-43U" secondAttribute="top" id="v35-8V-efD"/>
                             <constraint firstItem="V9L-hl-OWs" firstAttribute="top" secondItem="fUl-gm-R24" secondAttribute="bottom" id="vbO-lQ-LV4"/>
                             <constraint firstItem="03r-xU-W5j" firstAttribute="top" secondItem="V9L-hl-OWs" secondAttribute="bottom" id="vt6-V1-wnE"/>
-                            <constraint firstItem="AMn-w6-2mc" firstAttribute="top" secondItem="9UO-pg-gYJ" secondAttribute="bottom" id="xd1-cy-gvB"/>
+                            <constraint firstItem="03r-xU-W5j" firstAttribute="top" secondItem="AMn-w6-2mc" secondAttribute="bottom" id="wyt-Ji-wMJ"/>
+                            <constraint firstItem="fUl-gm-R24" firstAttribute="leading" secondItem="F0m-Tp-43U" secondAttribute="leadingMargin" constant="-16" id="yuV-OH-oxu"/>
                         </constraints>
                         <variation key="default">
                             <mask key="constraints">
-                                <exclude reference="NoZ-yF-YZa"/>
-                                <exclude reference="hSP-aO-Klc"/>
-                                <exclude reference="xd1-cy-gvB"/>
-                                <exclude reference="A9T-vq-BEO"/>
+                                <exclude reference="JIe-Dk-dX4"/>
+                                <exclude reference="r06-Wg-sic"/>
+                                <exclude reference="QTk-7e-aF3"/>
+                                <exclude reference="hfO-on-fpQ"/>
+                                <exclude reference="sM5-nL-2Qs"/>
+                                <exclude reference="4FX-5a-73R"/>
+                                <exclude reference="IwM-qr-qh2"/>
+                                <exclude reference="TsF-tf-wHE"/>
+                                <exclude reference="Wek-JC-T7I"/>
+                                <exclude reference="Z15-K1-bgY"/>
+                                <exclude reference="lC9-0d-6tF"/>
+                                <exclude reference="6y6-xf-vuc"/>
+                                <exclude reference="SEA-nU-NLp"/>
+                                <exclude reference="vbO-lQ-LV4"/>
+                                <exclude reference="nSE-7O-4Lh"/>
+                                <exclude reference="vt6-V1-wnE"/>
                             </mask>
                         </variation>
                     </view>
                     <nil key="simulatedTopBarMetrics"/>
                     <connections>
                         <outlet property="backImageView" destination="AMn-w6-2mc" id="PIL-n4-rPq"/>
-                        <outlet property="categoriesSearchBar" destination="gPq-Sv-Swk" id="REd-Cg-hRD"/>
-                        <outlet property="locationSearchBar" destination="fQn-tl-tB5" id="PgO-VL-lJi"/>
+                        <outlet property="locationSearchTextField" destination="3P6-Ny-j89" id="Krb-gv-Wx4"/>
+                        <outlet property="searchTextField" destination="Lrk-8R-Gfe" id="KE0-QP-dPa"/>
                         <outlet property="tableView" destination="V9L-hl-OWs" id="rFx-eU-6Vc"/>
                     </connections>
                 </viewController>
